<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activities.SubmitActivity"
    >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/medium"
            android:layout_height="match_parent"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_keyboard_backspace_24"
                android:onClick="back" />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_logo"
                android:onClick="back"/>
            <TextView
                android:id="@+id/splashTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fs_joeypro_mediumregular"
                android:text="@string/gads"
                android:textColor="#ffffff"
                android:layout_weight=".5"
                android:textStyle="bold"
                android:textSize="18sp" />

        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
    <TextView
        android:id="@+id/tv_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:text="@string/project_submission"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="@dimen/margin_s_medium"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/axiforma_regular"
        />
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/padding_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_project"
        android:background="@drawable/background"
        />

    <LinearLayout
        android:id="@+id/ll_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_s_large">
        <EditText
            android:id="@+id/et_first_name"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_weight=".4"
            android:text="@string/stephen"
            android:textColor="@color/black"
            android:fontFamily="@font/axiforma_regular"
            android:hint="@string/first_name"
            android:paddingHorizontal="@dimen/padding_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:background="@drawable/edittext_background"
            app:layout_constraintTop_toBottomOf="@+id/et_email"/>
        <EditText
            android:id="@+id/et_last_name"
            android:layout_width="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/ho"
            android:textColor="@color/black"
            android:hint="@string/last_name"
            android:fontFamily="@font/axiforma_regular"
            android:paddingHorizontal="@dimen/padding_small"
            android:layout_height="40dp"
            android:layout_weight=".4"
            android:background="@drawable/edittext_background"
            app:layout_constraintTop_toBottomOf="@+id/et_email"/>
    </LinearLayout>
    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginTop="@dimen/padding_large"
        android:text="@string/email"
        android:textColor="@color/black"
        android:fontFamily="@font/axiforma_regular"
        android:hint="@string/email_address"
        android:paddingHorizontal="@dimen/padding_small"
        android:background="@drawable/edittext_background"
        app:layout_constraintTop_toBottomOf="@+id/ll_name"/>
    <EditText
        android:id="@+id/et_link"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/github"
        android:textColor="@color/black"
        android:maxLines="1"
        android:inputType="textPersonName"
        android:layout_marginTop="@dimen/padding_large"
        android:hint="@string/project_link"
        android:fontFamily="@font/axiforma_regular"
        android:paddingHorizontal="@dimen/padding_small"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:background="@drawable/edittext_background"
        app:layout_constraintTop_toBottomOf="@+id/et_email"/>
    <Button
        android:onClick="onSubmitProject"
        android:layout_width="@dimen/margin_larger"
        android:layout_height="40dp"
        android:background="@drawable/button_primary"
        android:text="@string/submit"
        android:fontFamily="@font/axiforma_regular"
        android:textSize="@dimen/text_big"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_link"
        android:layout_marginTop="@dimen/margin_s_large"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>