<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/padding_small"
    android:background="@drawable/edittext_background"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/ll_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/iv_clear"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/margin_small"
            android:src="@drawable/ic_round_cancel_24"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/are_you_sure"
            android:fontFamily="@font/axiforma_medium"
            android:layout_marginTop="@dimen/padding_large"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_gravity="center"
            />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="@dimen/margin_larger"
            android:layout_height="40dp"
            android:background="@drawable/button_border_accent"
            android:text="@string/submit"
            android:fontFamily="@font/axiforma_regular"
            android:textSize="@dimen/text_big"
            android:textColor="@color/colorAccent"
            android:textAllCaps="false"
            android:layout_marginBottom="@dimen/padding_large"
            android:layout_gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_link"
            android:layout_marginTop="@dimen/margin_s_large"
            />
    </LinearLayout>
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/ll_success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_small"
        android:orientation="vertical">
       <ImageView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/margin_medium"
           android:layout_gravity="center_horizontal"
           android:src="@drawable/ic_round_check_circle_24"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submission_successful"
            android:fontFamily="@font/axiforma_medium"
            android:layout_marginTop="@dimen/padding_large"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_medium"
            />
    </LinearLayout>
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/ll_failed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_small"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_round_report_problem_24"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submission_not_successful"
            android:fontFamily="@font/axiforma_medium"
            android:layout_marginTop="@dimen/padding_large"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_medium"
            />
    </LinearLayout>
</LinearLayout>